@@ -1,6 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 4.2.0
 
+
+  *) [TS-2340] Fix TextLogObject log rolling.
+   Author: bettydramit <b13621367396@gmail.com>
+
   *) [TS-2343] Remove the --schema option from Traffic Manager, and the code
    around it.
 
